2008-01-19 Fred Kiefer <FredKiefer@gmx.de>

	* Headers/Additions/GNUstepGUI/GSDisplayServer.h
	(-setWindowdevice:forContext:), 
	* Source/GSDisplayServer.m (-setWindowdevice:forContext:): New
	method replacing windowdevice:.
	* Headers/AppKit/NSGraphicsContext.h,
	* Source/NSGraphicsContext.m: Add new MacOSX methods and ivars.
	* Source/NSWindow.m (-_processResizeEvent): Simplified with new
	GSDisplayServer method.
	* Source/NSWindow.m (-_initBackendWindow, -initWithWindowRef:):
	Moved device interaction into backend. Requires corresponding
	change in backend!

2008-01-18 14:39-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* Headers/Additions/GNUstepGUI/GSTheme.h
	* Source/GSTheme.m
	* Source/NSSegmentedCell.m: Moved drawing code to GSTheme.

2008-01-16 Fred Kiefer <FredKiefer@gmx.de>

	* Source/GSDragView.m (-_updateAndMoveImageToCorrectPosition):
	Add missing "!" in mask for local call.
	Patch by Andreas Schik <andreas.schik@web.de>.

2008-01-14 09:37-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* Headers/AppKit/NSSegmentedCell.h
	* Source/NSSegmentedCell.m: Removed _previous_segment, since it was
	redundant.

2008-01-14 09:17-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* Headers/AppKit/NSSegmentedControl.h
	* Source/NSSegmentedCell.m
	* Source/NSSegmentedControl.m: Correct tabbing.

2008-01-14 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSKeyValueBinding.m (+getBinding:forObject:): Correct bug
	in last change.

2008-01-13 Fred Kiefer <FredKiefer@gmx.de>

	* Source/GSBindingHelpers.h,
	* Source/NSKeyValueBinding.m: Add reverse value change methods.
	* Source/NSControl.m (-sendAction:to:): Send value change for binding.

2008-01-08 22:35-EST Gregory John Casamento <greg_casamento@yahoo.com>

	* Headers/AppKit/NSSegmentedCell.h: Added rect ivar to cache frame.
	* Source/NSBundleAdditions.m: Minor formatting changes.
	* Source/NSController.m: Added ivars to encodeWithCoder:.