@@ -30,6 +30,7 @@
 #include <math.h>
 
 #include "GNUstepGUI/GSFontInfo.h"
+#include <Foundation/NSCharacterSet.h>
 #include <Foundation/NSDictionary.h>
 #include <Foundation/NSString.h>
 #include <Foundation/NSArray.h>
